Fix droplet pallet covering modals (#613)
This fixes the z-index issue described in GTCMT/earsketch#3208

--- a/css/earsketch/droplet.less
+++ b/css/earsketch/droplet.less
@@ -71,7 +71,7 @@
   position: absolute;
   top: 0; bottom: 0; width: 300px;
   max-width: 40%;
-  z-index: 257;
+  z-index: 1;
   //background-color: #181818;
   -webkit-user-select: none;
   -khtml-user-select: none;
